# protokol-javni-prevoz

./: CMakeLists.txt  README.md
config/: client.conf  server.conf
include /client/: ClientBase.h  PaymentDevice.h  UserInterface.h
include /common/: Database.h  Logger.h  Message.h  TLSServer.h  TLSSocket.h  Utils.h
include /server/: AdminServer.h  CentralServer.h  ServerBase.h  VehicleServer.h
scripts/: build.sh  install_dependencies.sh
src/client/: ClientBase.cpp  PaymentDevice.cpp  UserInterface.cpp
src/common/: Database.cpp  Logger.cpp  Message.cpp  Protocol.cpp  TLSServer.cpp  TLSSocket.cpp  Utils.cpp
src/main/: admin_server_main.cpp  central_server_main.cpp  payment_device_main.cpp  user_client_main.cpp  vehicle_server_main.cpp
src/server/: AdminServer.cpp  CentralServer.cpp  ServerBase.cpp  VehicleServer.cpp
src/test/: admin_policy_test.cpp  basic_test.cpp  benchmark_test.cpp  concurrent_reservation_test.cpp  discount_test.cpp  group_duplicate_member_test.cpp  mcast_test.cpp  protocol_test.cpp  route_status_mcast_test.cpp  stream_test.cpp  test_admin_updates.cpp  test_three_clients.cpp  tls_test.cpp
uppaal/: TransportProtocol.xml  padadeadlock.xml  properties.q
